@@ -43,6 +43,7 @@ Mejorada emulación de Sinclair QL:
 Mejorado ZX Vision:
 - Permitir ocultar ventanas minimizadas
 - Permitir ubicar ventanas mas allá de los límites de la ventana principal de ZEsarUX
+- No reabir el menu al cerrar una ventana
 - Mostrar, con un punto, cuando un icono es de una ventana abierta pero minimizada
 - Mantener las proporciones de tamaño de la ventana de ZEsarUX (no permitir zoom x/y diferente) por defecto
 - Ocultar el cursor al enviar una ventana a segundo plano
