@@ -182,8 +182,6 @@ Para testear dos botones:
 - cpc: commando
 -que es common A/B en sg1000??
 
--zxvision: al cerrar una ventana no deberia abrir el menu principal, sino cerrar todos menus
-eso deberia ser tanto si se cierra pulsando en boton de cerrar o se pulsa ESC en la ventana
 
 
 -Head over heels enhanced de PCW hace un efecto extraño al cambiar de pantalla,
@@ -218,3 +216,9 @@ ok-funciones de mmc.c que no son de i/o no deben usar [mmc_card_selected], sino 
 -tiene sentido mmc_mirror_second_card?
 ok-probar atic atac
 -al cambiar mmc tarjeta 2 no deberia desactivar divmmc por ejemplo
+
+ok-zxvision: al cerrar una ventana no deberia abrir el menu principal, sino cerrar todos menus
+eso deberia ser tanto si se cierra pulsando en boton de cerrar o se pulsa ESC en la ventana
+
+
+-zxvision: al abrir menu principal, se reabre y duplica al pulsar F6
